--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Shiopper</title>
-<meta http-equiv="REFRESH" content="0;url=http://ff.dromman.cloudbees.net/retailer/newSearch"></HEAD>
+<meta http-equiv="REFRESH" content="0;url=http://ff.dromman.cloudbees.net/retailer/newSearch/splash"></HEAD>
 <BODY>
 </BODY>
 </HTML>
